
Main Goals for 1.0 Release

   * MOL2 and CML file formats

   * Generalized volumetric rendering: (1) mesh (2) solid (3) colormaps

   * Integrated tutorial/demonstration system

   * Fully consistent API (defined and correct return values)

Current Bugs to Fix

   * superposition system fails with degenerate sets (planer systems, etc).
     sometimes it just fails period

Changes up to 0.87

   * stick_transparency setting

   * ray_transparency_shadows setting

Changes up to 0.86

   * added command history feature to external gui

   * added security warning and mechanism for session files 
     containing movie commands.

   * session saves completed -- boy that was a lot of work!

   * reorganized tcltk menu structure

   * minimal texture options exposed in menu (slow!)

   * better support for Python in PyMOL command scripts ('\' works for multiline blocks).

   * freeze state and thaw state added to mol_action menu

   * added xmlrpc01.py demonstration program to examples/devel

   * ribbon_trace can be used to view CA-only models

   * ray_shadows setting can disable shadows in raytracer (slight performance inc.)

   * added secondary structure to chemical python model data structure

   * fixed slab mode of clip statement

   * update 'expand' and 'attach' can now take an atom name as well as an element symbol

Changes up to 0.85

   * mmatrix now stores the complete view instead of just the rotation matrix

   * unset command

   * fixed handling of calcium atoms
   
   * added automatic scroll bar for when you get too many objects/selections

   * added handle to manually adjust internal gui width

   * updated OpenGL depth_cue setting to more closely match those of raytracer

   * "center" command

   * PyMOL no longer wraps output lines by default "set wrap_output=78"
     to get previous behavior

   * relocated binary shared objects from modules into the modules/pymol
     tree
